--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,7 +1,3 @@
-/*body{
-	padding-top: 65px;
-}*/
-
 .client-header{
 	background: white;
 	border: 1px;
@@ -40,13 +36,27 @@ input[type=text]:focus {
 }*/
 
 .fc-time-grid .fc-slats td {
-    height: 8.5em;
+    height: 5vmin;
+    font-size: 2.75vmin !important;
 }
 
-/*	#calendar {
-		width: 900px;
-		margin: 0 auto;
-	}*/
+.fc-event  {
+    font-size: 2.5vmin !important;
+}
+
+/*.fc-agendaDay tr div{
+    height: 5vmin !important;
+}*/
+
+/*.fc-agenda-slots td div {
+     height: 4vmin !important;
+     font-size: 2vmin;
+}
+
+.fc-event-vert {
+  min-height: 4vmin;
+}*/
+
 
 
 
@@ -57,6 +67,7 @@ body {
   padding-top: 65px;
   font-family: 'Open Sans', sans-serif;
   height: 100%;
+  /*font-size: 2.25vmin;*/
 }
 
 h2 { margin: 0; }
@@ -91,7 +102,7 @@ h2 { margin: 0; }
   position: relative;
   background: url('http://lorempixel.com/900/500/nature') bottom left no-repeat;
   min-height: 400px;
-  background-size: 100%;
+  background-sie: 100%;
   padding: 10px;
 }
 
